[gd_scene load_steps=19 format=3 uid="uid://bfd1xw1pctdpi"]

[ext_resource type="Script" uid="uid://ythkm7kakmhm" path="res://GameScenes/UI/CardUpgradeUI/card_upgrade_ui.gd" id="1_5n6i1"]
[ext_resource type="Script" uid="uid://h6ptlq0rqwft" path="res://GameScenes/UI/CardUpgradeUI/CardOption.gd" id="1_sg1hp"]
[ext_resource type="Texture2D" uid="uid://n63fk72fuev1" path="res://Sprites/UpgradeIconTest.png" id="2_5n6i1"]
[ext_resource type="StyleBox" uid="uid://b272b72o0sl2j" path="res://GameScenes/UI/CardUpgradeUI/CardFrames/CommonFrame.tres" id="2_6dmf7"]
[ext_resource type="StyleBox" uid="uid://b0h1awwbrvbjs" path="res://GameScenes/UI/CardUpgradeUI/CardFrames/MythicFrame.tres" id="2_iqn8i"]
[ext_resource type="FontFile" uid="uid://rdmkk73yo3ar" path="res://Fonts/chary___.ttf" id="3_qdaac"]
[ext_resource type="AudioStream" uid="uid://ehf2nhhs3ei0" path="res://Sounds/CardPicked.wav" id="5_qdaac"]
[ext_resource type="AudioStream" uid="uid://bs50sxck1m0i4" path="res://Sounds/CardFlick.wav" id="6_0bldb"]

[sub_resource type="Curve" id="Curve_iqn8i"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7x7st"]
curve = SubResource("Curve_iqn8i")

[sub_resource type="Curve" id="Curve_fuigi"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ql7lf"]
curve = SubResource("Curve_fuigi")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2xkkp"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 100.0
radial_velocity_min = 199.99997
radial_velocity_max = 499.99997
radial_velocity_curve = SubResource("CurveTexture_7x7st")
gravity = Vector3(0, 0, 0)
scale_min = 4.0
scale_max = 8.0
scale_curve = SubResource("CurveTexture_ql7lf")

[sub_resource type="Animation" id="Animation_qdaac"]
resource_name = "HideCards"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Option1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Option2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Option3:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_5n6i1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Option1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Option2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Option3:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RarityParticles1:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RarityParticles2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RarityParticles3:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_sg1hp"]
resource_name = "ShowCards"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Option1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1, 1), Vector2(0.8, 1), Vector2(1, 1), Vector2(0.9, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Option2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.20000002, 0.25000003, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1e-05, 1), Vector2(1, 1), Vector2(0.8, 1), Vector2(1, 1), Vector2(0.9, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Option3:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.24999999, 0.3, 0.35000002, 0.40000004, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1e-05, 1), Vector2(1, 1), Vector2(0.8, 1), Vector2(1, 1), Vector2(0.9, 1), Vector2(1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardFlick")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RarityParticles1:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RarityParticles2:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RarityParticles3:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("RarityParticles1")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"restart"
}]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("RarityParticles2")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"restart"
}]
}
tracks/9/type = "method"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("RarityParticles3")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"restart"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5n6i1"]
_data = {
&"HideCards": SubResource("Animation_qdaac"),
&"RESET": SubResource("Animation_5n6i1"),
&"ShowCards": SubResource("Animation_sg1hp")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_0bldb"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("6_0bldb")

[node name="CardUpgradeUI" type="CanvasLayer"]
script = ExtResource("1_5n6i1")

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 60

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="RarityParticles1" type="GPUParticles2D" parent="."]
position = Vector2(131, 172)
emitting = false
amount = 128
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_2xkkp")

[node name="Option1" type="Panel" parent="." node_paths=PackedStringArray("UI", "hoverSound", "particles")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 240)
offset_left = 50.0
offset_top = 60.0
offset_right = 210.0
offset_bottom = 300.0
scale = Vector2(1e-05, 1)
pivot_offset = Vector2(80, 120)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("2_iqn8i")
script = ExtResource("1_sg1hp")
UI = NodePath("..")
hoverSound = NodePath("../CardFlick")
particles = NodePath("../RarityParticles1")

[node name="MarginContainer" type="MarginContainer" parent="Option1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Option1/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UpgradeIcon" type="TextureRect" parent="Option1/MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_5n6i1")

[node name="Label" type="RichTextLabel" parent="Option1/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 1
theme_override_fonts/normal_font = ExtResource("3_qdaac")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "+ Light Around You
+ Revive"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="RarityParticles2" type="GPUParticles2D" parent="."]
position = Vector2(320, 172)
emitting = false
amount = 128
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_2xkkp")

[node name="Option2" type="Panel" parent="." node_paths=PackedStringArray("UI", "hoverSound", "particles")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 240)
offset_left = 240.0
offset_top = 60.0
offset_right = 400.0
offset_bottom = 300.0
scale = Vector2(1e-05, 1)
pivot_offset = Vector2(80, 120)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("2_6dmf7")
script = ExtResource("1_sg1hp")
UI = NodePath("..")
hoverSound = NodePath("../CardFlick")
particles = NodePath("../RarityParticles2")

[node name="MarginContainer" type="MarginContainer" parent="Option2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Option2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UpgradeIcon" type="TextureRect" parent="Option2/MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_5n6i1")

[node name="Label" type="RichTextLabel" parent="Option2/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 1
theme_override_fonts/normal_font = ExtResource("3_qdaac")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "+ Light Around You
+ Revive"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="RarityParticles3" type="GPUParticles2D" parent="."]
position = Vector2(510, 172)
emitting = false
amount = 128
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_2xkkp")

[node name="Option3" type="Panel" parent="." node_paths=PackedStringArray("UI", "hoverSound", "particles")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 240)
offset_left = 430.0
offset_top = 60.0
offset_right = 590.0
offset_bottom = 300.0
scale = Vector2(1e-05, 1)
pivot_offset = Vector2(80, 120)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("2_6dmf7")
script = ExtResource("1_sg1hp")
UI = NodePath("..")
hoverSound = NodePath("../CardFlick")
particles = NodePath("../RarityParticles3")

[node name="MarginContainer" type="MarginContainer" parent="Option3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Option3/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UpgradeIcon" type="TextureRect" parent="Option3/MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_5n6i1")

[node name="Label" type="RichTextLabel" parent="Option3/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 1
theme_override_fonts/normal_font = ExtResource("3_qdaac")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "+ Light Around You
+ Revive"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5n6i1")
}

[node name="CardSelectionQueueTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="CardPicked" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qdaac")
volume_db = -5.0
bus = &"SoundEffects"

[node name="CardFlick" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_0bldb")
volume_db = -5.0
max_polyphony = 3
bus = &"SoundEffects"

[connection signal="timeout" from="CardSelectionQueueTimer" to="." method="_on_card_selection_queue_timer_timeout"]
